# login_ng

./: .gitignore  Cargo.toml  Makefile  login_ng_0.6.17.bb  make_release.sh
.github/workflows/: release.yml
sessionexec/src/: gamescope.rs  lib.rs  main.rs
src/: lib.rs  mount.rs  storage.rs  user.rs
src/interactions/: cli.rs  conversation.rs  greetd.rs  login.rs  mod.rs  pam.rs
src/lib/: pam_login_ng.rs
src/pam/: mod.rs  mount.rs  result.rs  security.rs  session.rs
src/tests/: mod.rs
src/tests/pam/: mount.rs  security.rs
